# Stuffus

./: .gitignore  README.md  start.bat
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py
backend/app/data/: criterion_parser.py  effect_mapping.py  ingest.py  normalize.py  repository.py  schema.sql
backend/app/models/: request.py  response.py
backend/app/solver/: damage.py  model.py  prefilter.py  service.py  solve.py  stats.py
backend/tests/: test_api.py  test_damage.py  test_solver.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  constants.ts  icons.tsx  share.ts  styles.css  types.ts
frontend/src/assets/icons/: README.md
frontend/src/components/: BuildResult.tsx  ConstraintBuilder.tsx  StuffTypeSelector.tsx
