[project]
name = "dofus-optimizer-backend"
version = "0.1.0"
description = "Optimiseur de stuff Dofus — backend FastAPI + OR-Tools CP-SAT"
requires-python = ">=3.12"
dependencies = [
    "ortools>=9.15",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
